# Terra-Sight

./: .env.example  .gitignore  LICENSE  README.md  package-lock.json  package.json  render.yaml
.github/workflows/: daily-refresh.yml
apps/api/: .dockerignore  Dockerfile  pyproject.toml  requirements-dev.txt  requirements.txt
apps/api/app/: __init__.py  auth.py  config.py  geometry.py  main.py  schemas.py  supabase_client.py
apps/api/app/advisory/: __init__.py  groq_client.py  inputs.py  safety.py  service.py  template.py
apps/api/app/alerts/: __init__.py  engine.py  store.py
apps/api/app/imagery/: __init__.py  analysis.py  pipeline.py  raster.py  render.py  stac.py
apps/api/app/routers/: fields.py  health.py  internal.py
apps/api/app/weather/: __init__.py  client.py  escalation.py
apps/api/tests/: test_advisory.py  test_alerts_engine.py  test_alerts_store.py  test_config.py  test_fields.py  test_geometry.py  test_health.py  test_imagery_analysis.py  test_imagery_pipeline.py  test_imagery_render.py  test_internal.py  test_weather.py
apps/web/: package.json
apps/web/src/app/: globals.css  layout.tsx  page.tsx
apps/web/src/components/: FieldMap.tsx  SignIn.tsx  Workspace.tsx
apps/web/src/components/dashboard/: AdvicePanel.tsx  DateScrubber.tsx  FieldDashboard.tsx  HonestyBadge.tsx  NdviChart.tsx  (+2 more)
apps/web/src/lib/: api.ts  ndvi.ts  supabase.ts  types.ts  zones.ts
docs/: BACKLOG.md  BUILD_STATE.md  DEPLOY.md  PROGRESS_REPORTS.md
supabase/migrations/: 0001_fields.sql  0002_observations.sql  0003_alerts.sql  0004_observation_bounds.sql
